# KKSpoofer

./: CMakeLists.txt  LICENSE  README.md
rules/: 45-tinyusb-vendor-example.rules
src/: include.h  main.c  tusb_config.h  usb-desc.c
